[package]
name = "AstroForge"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.5"
rodio = "0.17"
glam = "0.25"
base64 = "0.21"
wgpu = "0.17.2"
futures-lite = "1"
bytemuck = { version = "1", features = ["derive"] }
wgpu_glyph = "0.21.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "4.1.0"
